fix title wrap

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -107,6 +107,7 @@ body {
     .title {
         font-size: 2em;
         width: 80%;
+        overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
     }
